radix-transactions/tests/assets/manifest_generator_error_argument_could_not_be_read_as_expected_type_2.rtm
TAKE_ALL_FROM_WORKTOP
    Address("resource_sim1thqu8jcc3zh8ukuh0rwtllr84dgrd3z8j9zjdelkx3zf4kjasgvnm8")
    Bucket("my_bucket")
;
ASSERT_BUCKET_CONTENTS
    Bucket("my_bucket")
    Decimal("10")
;